# manen

./: Cargo.toml  LICENSE  luau-shim  readme.md
lua/: rpc.lua
queries/: locals.scm
src/: completion.rs  config.rs  editor.rs  format.rs  highlight.rs  hinter.rs  inspect.rs  lua.rs  main.rs  parse.rs  validator.rs
