[package]
name = "manen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
comfy-table = "7.1.4"
mlua = { version = "0.10.5", features = ["lua54", "vendored", "anyhow", "send"] }
nu-ansi-term = "0.50.1"
reedline = "0.40.0"
tree-sitter-highlight = "0.25.6"
tree-sitter-lua = "0.2.0"
