[package]
name = "manen"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[features]
default = ["vendored", "lua54"]
vendored = ["mlua/vendored"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]

[dependencies]
aho-corasick = "1.1.3"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
comfy-table = "7.1.4"
ctrlc = "3.4.7"
directories = "6.0.0"
emmylua_parser = "0.10.8"
lazy_static = "1.5.0"
mlua = { version = "0.10.5", features = ["anyhow", "send", "async", "macros"] }
nix = { version = "0.30.1", features = ["signal"] }
nu-ansi-term = "0.50.1"
reedline = "0.40.0"
rexpect = "0.6.2"
rowan = "0.16.1"
send_wrapper = "0.6.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
